Descargado de overleaf again

--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/0-datos_estudiante.tex
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/0-datos_estudiante.tex
@@ -44,7 +44,7 @@
 \def \CAPantecedentes {Antecedentes}
 \def \CAPalcance {Alcance}
 \def \CAPanexos {Anexos}
-%\def \CAPglosario {Glosario}
+\def \CAPglosario {Glosario}
 
 % Formato y estilo de la plantilla
 % -------------------------------------------------------------------------------
