--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/e-antecedentes.tex
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/e-antecedentes.tex
@@ -1,4 +1,4 @@
-Las señales bioeléctricas y las señales de la epilepsia son temas de gran interés en la actualidad debido a su relevancia en la medicina y la neurociencia. La epilepsia es una enfermedad neurológica común que afecta a millones de personas en todo el mundo \cite{pichon2017patogenia}. La prevalencia de la enfermedad varía según el país y la región del mundo, siendo más común en niños y personas mayores, además, se estima que el 80\% de las personas con epilepsia vive en países de bajos y medianos ingresos, donde el acceso a los tratamientos puede ser limitado o inaccesible \cite{Epilepsia_OMS}.
+Las señales bioeléctricas y las señales de la epilepsia son temas de gran interés en la actualidad debido a su relevancia en la medicina y la \gls{neurociencia}. La epilepsia es una enfermedad neurológica común que afecta a millones de personas en todo el mundo \cite{pichon2017patogenia}. La prevalencia de la enfermedad varía según el país y la región del mundo, siendo más común en niños y personas mayores, además, se estima que el 80\% de las personas con epilepsia vive en países de bajos y medianos ingresos, donde el acceso a los tratamientos puede ser limitado o inaccesible \cite{Epilepsia_OMS}.
 
 En Guatemala, se encuentra el Centro de Epilepsia y Neurocirugía Funcional HUMANA, una organización formada por profesionales en neurociencias que trabaja con pacientes que padecen problemas neurológicos de difícil control, incluyendo la epilepsia. El centro posee el único laboratorio de vídeo electroencefalograma en Guatemala y lleva a cabo anotaciones de señales EEG manualmente, lo que implica una gran cantidad de horas de trabajo realizadas por profesionales especializados del hospital. El tiempo de operación para resaltar los segmentos de interés y finalmente dar el diagnóstico depende de la duración del registro y puede durar desde cuatro horas hasta algunos días \cite{humana_2021}. Según una entrevista realizada en 2020 al director de HUMANA, Dr. Juan Carlos Lara, las señales de donde se extraen los datos son obtenidas de personas sin y con padecimiento de epilepsias, lo que permite a los especialistas hacer las anotaciones competentes dentro de los registros \cite{camila_2022}.
 
