--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/o-glosario.tex
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/o-glosario.tex
@@ -1,4 +1,4 @@
-\newglossaryentry{neurociencias}
+\newglossaryentry{neurociencia}
 {
     name=neurociencia,
     description={La neurociencia es un campo multidisciplinario que se dedica al estudio del sistema nervioso, que incluye el cerebro, la médula espinal y los nervios.}
