--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/o-glosario.tex
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/o-glosario.tex
@@ -1,3 +1,8 @@
+\newglossaryentry{latex}
+{
+    name=latex,
+    description={Es un lenguaje de marcado adecuado especialmente para la creación de documentos científicos}
+} 
 \newglossaryentry{neurociencia}
 {
     name=neurociencia,
@@ -13,6 +18,7 @@
 	name=algoritmo,
 	description={Un algoritmo es una secuencia finita de instrucciones o reglas bien definidas, diseñadas para realizar una tarea o resolver un problema específico.} 
 }
+
 \newglossaryentry{Struct}
 {
 	name=Struct,
@@ -23,6 +29,7 @@
 	name=Frecuencia de muestreo,
 	description={Se refiere al número de muestras de una señal analógica que se toman en un período de tiempo determinado para convertirla en una señal digital. En otras palabras, es la cantidad de veces que se registran o se toman mediciones de una señal analógica en un segundo.} 
 }
+
 \newglossaryentry{intersujeto}
 {
 	name=intersujeto,
@@ -33,21 +40,24 @@
 	name=intrasujeto,
 	description={Se refiere a algo que ocurre o se aplica dentro del mismo sujeto o individuo. En el contexto de la investigación científica, especialmente en estudios clínicos o experimentales, el término se utiliza para describir la variabilidad o los efectos dentro de un mismo individuo a lo largo del tiempo o en diferentes condiciones.} 
 }
+
 \newglossaryentry{wavelets}
 {
 	name=wavelets,
 	description={Son funciones matemáticas que tienen una duración limitada y están localizadas tanto en el tiempo como en la frecuencia. Son utilizadas en el análisis de señales y procesamiento de imágenes para representar y analizar información de manera eficiente.} 
 }
-\newglossaryentry{Matriz de confusión}
+\newglossaryentry{matrices de confusión}
 {
 	name=Matriz de confusión,
 	description={Es una herramienta que se utiliza en el campo de la clasificación en aprendizaje automático para evaluar el rendimiento de un modelo predictivo. Esta matriz presenta de manera sistemática la comparación entre las predicciones de un modelo y las clases reales de un conjunto de datos.} 
 }
+
 \newglossaryentry{RNA}
 {
 	name=RNA,
 	description={En el ámbito del aprendizaje automático y la inteligencia artificial, una Red Neuronal Artificial se refiere a un modelo computacional inspirado en la estructura y funcionamiento del cerebro humano. } 
 }
+
 \newglossaryentry{SVM}
 {
 	name=SVM,
