--- a/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/e-antecedentes.tex
+++ b/Documentos/Tesis 2023 - Cristhofer Isaac Patzán/e-antecedentes.tex
@@ -4,21 +4,21 @@ En Guatemala, se encuentra el Centro de Epilepsia y Neurocirugía Funcional HUMA
 
 En la Universidad del Valle de Guatemala (UVG) se ha estado desarrollando una herramienta de aprendizaje automático para la detección de crisis epilépticas en señales EEG. En el año 2020, María Jesús Angulo presentó un trabajo de graduación en el que se demostró que es posible detectar estas crisis mediante aprendizaje automático al caracterizar y dividir correctamente los segmentos de las señales \cite{María_ang_2020}. 
 
-Por su parte, en el año 2021, David Alejandro Vela presentó una segunda iteración de la herramienta en su trabajo de graduación. En este caso, se realizaron ajustes a la interfaz anterior, empleando algoritmos de aprendizaje automático supervisado para clasificar la señal EEG en una de cuatro clases \cite{david_2022}. El clasificador con mejor desempeño en tiempo continuo obtuvo un promedio de exactitud del 96.7\%, utilizando máquina de vectores de soporte con características en tiempo continuo y kernel gaussiano. Además, se agregó una nueva sección a la herramienta que se encarga de la generación de anotaciones dentro de un apartado con varias opciones de personalización para la visualización. Aunque se trabajó principalmente con señales EEG en dominio del tiempo en ambas fases, se reconoce la oportunidad de analizar las señales en otros dominios y de analizar otro tipo de señales bioeléctricas. Una de las limitaciones del trabajo fue la predominancia del uso de técnicas de aprendizaje supervisado, lo que abre espacio para profundizar en el análisis de los datos con aprendizaje no supervisado. Los resultados de esta segunda fase se observan en la Figura~\ref{fig:mesh1} \cite{david_2022}. Además en la Figura~\ref{fig:app_ini} se puede ver la ventana inicial de la app y en la Figura~\ref{fig:app_chn_slct} se puede observar la forma en la que se clasifica un segmento de señal por color según su estado ictal.
+Por su parte, en el año 2021, David Alejandro Vela presentó una segunda iteración de la herramienta en su trabajo de graduación. En este caso, se realizaron ajustes a la interfaz anterior, empleando algoritmos de aprendizaje automático supervisado para clasificar la señal EEG en una de cuatro clases \cite{david_2022}. El clasificador con mejor desempeño en tiempo continuo obtuvo un promedio de exactitud del 96.7\%, utilizando máquina de vectores de soporte con características en tiempo continuo y \gls{kernel} gaussiano. Además, se agregó una nueva sección a la herramienta que se encarga de la generación de anotaciones dentro de un apartado con varias opciones de personalización para la visualización. Aunque se trabajó principalmente con señales EEG en dominio del tiempo en ambas fases, se reconoce la oportunidad de analizar las señales en otros dominios y de analizar otro tipo de señales bioeléctricas. Una de las limitaciones del trabajo fue la predominancia del uso de técnicas de aprendizaje supervisado, lo que abre espacio para profundizar en el análisis de los datos con aprendizaje no supervisado. Los resultados de esta segunda fase se observan en la Figura~\ref{fig:mesh1} \cite{david_2022}. Además en la Figura~\ref{fig:app_ini} se puede ver la ventana inicial de la app y en la Figura~\ref{fig:app_chn_slct} se puede observar la forma en la que se clasifica un segmento de señal por color según su estado ictal.
 
 \begin{figure}[t]
     \centering
     \includegraphics[width=0.5\textwidth]{figuras/David resultado.png}
-    \caption{Resumen de los resultados de los clasificadores generados: red neuronal (RNN) y máquina de vectores de soporte (SVM) \cite{david_2022}.}
+    \caption{Resumen de los resultados de los clasificadores generados: red neuronal (RNA) y máquina de vectores de soporte (SVM) \cite{david_2022}.}
     \label{fig:mesh1}
 \end{figure}
 
-En el año 2022 Camila Lemus \cite{camila_2022} concluyó que las relaciones entre bandas de frecuencia son funcionales para la clasificación binaria, logrando un porcentaje de rendimiento superior al 99\% utilizando redes neuronales con dos o más características para las clases Ictal/Sano y superior a un 98.80\% para las clases Interictal/Preictal, dichos resultados se pueden observar en la Figura~\ref{fig:camila_tabla_res1}. Además, se encontró que es conveniente generar el vector de características combinando la razón 1 ($\theta/\alpha$) y la razón 2 ($\beta/\alpha$), ya que los clasificadores tienen un rendimiento igual o mayor a 98.90\% en un menor tiempo. Sin embargo, se observó que la extracción de características en dominio de la frecuencia no es muy eficiente, tardando en promedio aproximadamente 3 minutos por registro individual para procesar 409,700 muestras y 4.33 minutos para procesar 3 millones de muestras \cite{camila_2022}. El algoritmo utilizado para el análisis y el reconocimiento de patrones en señales de ECG fue \textit{K-means Clustering}. Los resultados mostraron que el algoritmo era capaz de identificar agrupaciones de señales de ECG asociadas a oscilaciones postictales de la frecuencia cardiaca. Esto sugiere que la agrupación de \textit{K-means Clustering} podría utilizarse para desarrollar un nuevo método de diagnóstico y seguimiento de la epilepsia.
+En el año 2022 Camila Lemus \cite{camila_2022} concluyó que las relaciones entre bandas de frecuencia son funcionales para la clasificación binaria, logrando un porcentaje de rendimiento superior al 99\% utilizando redes neuronales con dos o más características para las clases Ictal/Sano y superior a un 98.80\% para las clases Interictal/Preictal, dichos resultados se pueden observar en la Figura~\ref{fig:camila_tabla_res1}. Además, se encontró que es conveniente generar el vector de características combinando la razón 1 ($\theta/\alpha$) y la razón 2 ($\beta/\alpha$), ya que los clasificadores tienen un rendimiento igual o mayor a 98.90\% en un menor tiempo. Sin embargo, se observó que la extracción de características en dominio de la frecuencia no es muy eficiente, tardando en promedio aproximadamente 3 minutos por registro individual para procesar 409,700 muestras y 4.33 minutos para procesar 3 millones de muestras \cite{camila_2022}. El \gls{algoritmo} utilizado para el análisis y el reconocimiento de patrones en señales de ECG fue \textit{K-means Clustering}. Los resultados mostraron que el algoritmo era capaz de identificar agrupaciones de señales de ECG asociadas a oscilaciones postictales de la frecuencia cardiaca. Esto sugiere que la agrupación de \textit{K-means Clustering} podría utilizarse para desarrollar un nuevo método de diagnóstico y seguimiento de la epilepsia.
 
 \begin{figure}[t]
     \centering
     \includegraphics[width=0.5\textwidth]{figuras/3 rendimiento RNA Camila.png}
-    \caption{Resumen del rendimiento de la RNN para dos clasificadores binarios utilizando características individuales en dominio de la frecuencia \cite{camila_2022}.}
+    \caption{Resumen del rendimiento de la RNA para dos clasificadores binarios utilizando características individuales en dominio de la frecuencia \cite{camila_2022}.}
     \label{fig:camila_tabla_res1}
 \end{figure}
 
